feat: Add WebSocket dependencies and WebSocketConfig.